--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ div.green {
   background-color: green;
 }
 
+div.orange {
+  background-color: orangered;
+}
+
 .invisible {
   display: none;
 }
